--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 # Compiled class file
 *.class
-
 # Log file
 *.log
-
+target/
 # BlueJ files
 *.ctxt
-
+.idea/
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -18,6 +17,6 @@
 *.zip
 *.tar.gz
 *.rar
-
+*.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
