--- a/standard-api/pom.xml
+++ b/standard-api/pom.xml
@@ -3,18 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-<parent>
+  <parent>
     <groupId>com.intellijcloud.standard</groupId>
     <artifactId>standard-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-</parent>
+  </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.intellijcloud.standard</groupId>
-  <artifactId>standard-app</artifactId>
+  <artifactId>standard-api</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>standard-app</name>
+  <name>standard-api</name>
 
   <packaging>jar</packaging>
 
@@ -23,14 +23,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.intellijcloud.standard</groupId>
-            <artifactId>standard-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.intellijcloud.standard</groupId>
-            <artifactId>standard-infrastruc</artifactId>
-        </dependency>
 
     </dependencies>
 </project>
