--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
                 <artifactId>commons-pool</artifactId>
                 <version>${commons.pool.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>3.4.6</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
