--- a/standard-app/pom.xml
+++ b/standard-app/pom.xml
@@ -31,6 +31,19 @@
             <groupId>com.intellijcloud.standard</groupId>
             <artifactId>standard-infrastruc</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 </project>
