--- a/standard-infrastruc/pom.xml
+++ b/standard-infrastruc/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>cglib</artifactId>
             <version>3.2.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.2.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>standard-infrastruc</finalName>
